package com.mygdx.game.engine.entity;

public interface BehaviourManager<E> {
    E moveFallingObject();
}
